Fix alignment bug with the peroson information component

--- a/src/assets/stylesheets/persondisplay.module.css
+++ b/src/assets/stylesheets/persondisplay.module.css
@@ -4,6 +4,8 @@
   position: relative;
   padding: 30vh 5vh 3vh 3vh;
   margin-top: 5vh;
+  display: flex;
+  align-items: flex-end;
 }
 
 .Kanye {
@@ -53,7 +55,6 @@
   }
 
   .Malala {
-    background-size: 150% 100%;
     background-position-x: 10%;
   }
   
