--- a/src/assets/stylesheets/personinfo.module.css
+++ b/src/assets/stylesheets/personinfo.module.css
@@ -15,9 +15,6 @@
 }
 
 .Voting {
-  /* display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-content: center; */
   display: flex;
   justify-content: space-between;
   align-items: center;
